[project]
dependencies = []
authors = [{ name = "Guillermo Perez", email = "bisho@revenuecat.com" }]
license = { text = "MIT License" }
name = "rc-injector"
version = "0.0.3"
description = "Python dependency injector"
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
homepage = "https://github.com/RevenueCat/rc-injector"

[tool.poetry.dependencies]
python = "^3.8"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["rc_injector"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.ruff]
line-length = 88

[tool.uv]
reinstall-package = ["rc-injector"]

[tool.ruff.lint.per-file-ignores]
# "tests/*.py" = ["E731"]